--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+html {
+  background-color: black;
+}
+
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
@@ -5,6 +11,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: black; 
 }
 
 code {
