--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,23 @@ body {
  width: 100%;
 }
 
+.game-container{
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.footer-container{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #3f51b5;
+  color: white;
+}
+
+.flex-footer{
+  text-align: center;
+}
+
 textarea {
   width: 100%;
 }
@@ -65,6 +82,18 @@ input {
 
 label {
   display: block;
+}
+
+.button-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.flex-button{
+
 }
 
 
